[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/DialogScenes/Dialouge_System.gd" type="Script" id=1]
[ext_resource path="res://scenes/_common/GUI/fonts/Vollkorn-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Dialouge_System" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -276.5
margin_top = -60.0
margin_right = 276.5
margin_bottom = -10.0
custom_fonts/font = SubResource( 1 )
text = "TEXT"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Fade_Player" type="AnimationPlayer" parent="."]
anims/Fade_out = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="animation_finished" from="Fade_Player" to="." method="_on_Fade_Player_animation_finished"]
[connection signal="animation_started" from="Fade_Player" to="." method="_on_Fade_Player_animation_started"]
